[build-system]
requires = ["uv>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.extra-build-dependencies]
wo2net-delpher-tools = ["uv_build"]

[project]
name = "wo2net-delpher-tools"
version = "0.1.0"
description = "Tools for extracting and processing Delpher data for WO2Net"
readme = "README.md"
requires-python = ">=3.9.6"
authors = [
    { name = "Daan Raven", email = "daan.raven@wo2net.nl" }
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "lxml>=6.0.2",
    "requests>=2.32.5",
    "sickle>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/Stichting-WO2Net/wo2net-delpher-tools"
Repository = "https://github.com/Stichting-WO2Net/wo2net-delpher-tools.git"
Issues = "https://github.com/Stichting-WO2Net/wo2net-delpher-tools/issues"
